Fix file size display. A lot of fixes.
git-svn-id: https://libfm.svn.sourceforge.net/svnroot/libfm/branches/libfm@17 0a16f17f-54f8-45a0-9d6a-1c3e01b6f470

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -41,6 +41,7 @@ libfm_gtk_SOURCES = \
 	fm-folder-model.c fm-folder-model.h \
 	fm-path-entry.c fm-path-entry.h \
 	fm-file-menu.c fm-file-menu.h \
+	fm-file-properties.c fm-file-properties.h \
 	fm-gtk-marshal.c fm-gtk-marshal.h \
 	$(NULL)
 
