Add a generic list container FmList which is a GQueue supporting ref counting and based FmPathList on it.
git-svn-id: https://libfm.svn.sourceforge.net/svnroot/libfm/branches/libfm@20 0a16f17f-54f8-45a0-9d6a-1c3e01b6f470

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,10 +9,12 @@ bin_PROGRAMS = libfm-demo
 
 libfm_SOURCES = \
 	fm.c fm.h \
+	fm-list.c fm-list.h \
 	fm-path.c fm-path.h \
 	fm-path-list.c fm-path-list.h \
 	fm-job.c fm-job.h \
 	fm-dir-list-job.c fm-dir-list-job.h \
+	fm-file-ops-job.c fm-file-ops-job.h \
 	fm-deep-count-job.c fm-deep-count-job.h \
 	fm-folder.c fm-folder.h \
 	fm-file-info.c fm-file-info.h \
