* Add very primitive progress dlg. (not finished) * Fix bugs in fm_job_call_main_thread(). * Add simple APIs for file operations. * Several minor fixes.

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -4,6 +4,7 @@ NULL=
 uidir=$(datadir)/libfm/ui
 ui_in_files= \
 	file-prop.glade \
+	progress.glade \
 	$(NULL)
 ui_DATA = $(ui_in_files:.glade=.ui)
 
