* Query info of newly added files asynchronously and show them correctly. * Refactor some FmFolderModel APIs and rename some variables. * Update license information of several files.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -66,6 +66,7 @@ libfm_gtk_SOURCES = \
 	gtk/fm-icon-pixbuf.c gtk/fm-icon-pixbuf.h \
 	gtk/fm-cell-renderer-text.c gtk/fm-cell-renderer-text.h \
 	gtk/fm-dnd-src.c gtk/fm-dnd-src.h \
+	gtk/fm-dnd-dest.c gtk/fm-dnd-dest.h \
 	gtk/fm-gtk-marshal.c gtk/fm-gtk-marshal.h \
 	$(NULL)
 
