Make libfm a real library which can be dynamically linked by other programs.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,10 @@
+NULL=
+
 SUBDIRS=src po data
+
+EXTRA_DIST = \
+	libfm.pc.in \
+	$(NULL)
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libfm.pc
