Add basic config options for libfm.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,3 +2,6 @@ SUBDIRS=ui
 
 mimedir = $(datadir)/mime/packages
 mime_DATA = libfm.xml
+
+libfmconfdir = $(sysconfdir)/xdg/libfm
+libfmconf_DATA = libfm.conf
