--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,3 +1,19 @@
 data/ui/file-prop.glade
 data/ui/ask-rename.glade
 data/ui/progress.glade
+
+src/gtk/fm-folder-view.c
+src/gtk/fm-gtk-utils.c
+src/gtk/fm-places-view.c
+src/gtk/fm-progress-dlg.c
+src/gtk/fm-file-menu.c
+src/gtk/fm-file-properties.c
+src/gtk/fm-dnd-dest.c
+
+src/job/fm-dir-list-job.c
+src/job/fm-file-ops-job-delete.c
+
+src/base/fm-utils.c
+src/base/fm-file-info.c
+
+src/demo/main-win-ui.c
