--- a/libfm.pc.in
+++ b/libfm.pc.in
@@ -7,5 +7,5 @@ Name: libfm
 Description: 
 Requires: gtk+-2.0 >= 2.16.0 gthread-2.0 gio-unix-2.0
 Version: @VERSION@
-Libs: -L${libdir} -lmenu-cache
-Cflags: -I${includedir}
+Libs: -L${libdir} -lfm -lfm-gtk
+Cflags: -I${includedir}/libfm
